--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.4.0",
     "rxjs": "^5.1.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
